# opensesame-plugin-parallel_port_trigger

./: CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  experiment_manager.py  parallel_port_trigger.py  pyproject.toml  setup.cfg  setup.py  stdeb.cfg
debian/: changelog  control  copyright  rules
experiment_manager/: experiment_manager.py  info.yaml
opensesame_plugins/parallel_port_trigger/: __init__.py
opensesame_plugins/parallel_port_trigger/parallel_port_trigger_init/: __init__.py  parallel_port_trigger_init.py
opensesame_plugins/parallel_port_trigger/parallel_port_trigger_send/: __init__.py  parallel_port_trigger_send.md  parallel_port_trigger_send.py
opensesame_plugins/parallel_port_trigger_init/: info.yaml  parallel_port_trigger_init.md  parallel_port_trigger_init.py
opensesame_plugins/parallel_port_trigger_send/: info.yaml  parallel_port_trigger_send.md  parallel_port_trigger_send.py
parallel_port_trigger/: info.yaml  parallel_port_trigger.html  parallel_port_trigger.md  parallel_port_trigger.py
parallel_port_trigger_init/: info.yaml  parallel_port_trigger_init.md  parallel_port_trigger_init.py  parallelppdev.py
parallel_port_trigger_send/: info.yaml  parallel_port_trigger_send.md  parallel_port_trigger_send.py
